<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AdCatalog</string>
    <string name="admob_id">INSERT_YOUR_AD_UNIT_ID_HERE</string>
    <string name="adCatalog_banners">Banners</string>
    <string name="adCatalog_interstitials">Interstitials</string>
    <string name="adCatalog_advanced_layouts">Advanced Layouts</string>
    <string name="adCatalog_test_mode_off">Test Mode Off</string>
    <string name="adCatalog_test_mode_on">Test Mode On</string>
    <string name="adCatalog_video">Video</string>
    <string name="advancedLayouts_title">Advanced Layouts</string>
    <string name="advancedLayouts_examples">Examples</string>
    <string name="advancedLayouts_tabbed_view">TabbedView</string>
    <string name="advancedLayouts_list_view">ListView</string>
    <string name="advancedLayouts_opengl_view">OpenGLView</string>
    <string name="advancedLayouts_scroll_view">ScrollView</string>
    <string name="banners_title">Banners</string>
    <string name="banners_standard_dimensions">320x50</string>
    <string name="banners_mrect_dimensions">300x250</string>
    <string name="banners_smart_dimensions">Smart Banner</string>
    <string name="banners_fullsize_dimensions">468x60</string>
    <string name="banners_leaderboard_dimensions">728x90</string>
    <string name="interstitials_title">Interstitials</string>
    <string name="interstitials_basic">Basic</string>
    <string name="interstitials_game_levels">Game Levels</string>
    <string name="interstitials_video_preroll">Video Pre-Roll</string>
    <string name="interstitials_page_swipe">Page Swipe</string>
    <string name="interstitials_use_cases">Use Cases</string>
    <string name="interstitials_splash">Splash</string>
    <string name="video_title">Video</string>
    <string name="video_examples">Examples</string>
    <string-array name="video_ad_list">
        <item>Instream 1</item>
        <item>AdSense Skippable</item>
        <item>Wrapper</item>
        <item>AdsList</item>
    </string-array>
    <string-array name="video_ad_tags">
        <item><![CDATA[http://pubads.g.doubleclick.net/gampad/ads?sz=400x300&iu=%2F6062%2Fhanna_MA_group%2Fvideo_comp_app&ciu_szs=&impl=s&gdfp_req=1&env=vp&output=xml_vast2&unviewed_position_start=1&m_ast=vast&url=[referrer_url]&correlator=[timestamp]]]></item>
        <item><![CDATA[http://googleads.g.doubleclick.net/pagead/ads?eid=41351061&ad_type=skippablevideo&client=ca-video-pub-4975756195050566&videoad_start_delay=0&description_url=http%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DSS7HCA9U0hQ&max_ad_duration=60000]]></item>
        <item><![CDATA[http://pubads.g.doubleclick.net/gampad/ads?sz=400x300&iu=%2F6062%2Fhanna_MA_group%2Fwrapper_with_comp&ciu_szs=728x90&impl=s&gdfp_req=1&env=vp&output=xml_vast2&unviewed_position_start=1&m_ast=vast&url=[referrer_url]&correlator=[timestamp]]]></item>
        <item><![CDATA[http://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=%2F15018773%2Feverything2&ciu_szs=300x250%2C468x60%2C728x90&impl=s&gdfp_req=1&env=vp&output=xml_vast2&unviewed_position_start=1&url=[referrer_url]&correlator=[timestamp]&cmsid=133&vid=10XWSh7W4so&ad_rule=1]]></item>
    </string-array>
    <string name="video_companion_placeholder">Companion Slot</string>
    <string name="videoPreroll_title">Video Preroll</string>
    <string name="videoPreroll_earthquake">Earthquake</string>
    <string name="videoPreroll_fill_in_the_blanks">Fill In The Blanks</string>
    <string name="videoPreroll_package_tracking">Package Tracking</string>
    <string name="gameLevels_level_1">Level 1</string>
    <string name="gameLevels_level_2">Level 2</string>
    <string name="gameLevels_next">next </string>
    <string name="pageSwipe_page_1">Page 1</string>
    <string name="pageSwipe_page_2">Page 2</string>
    <string name="pageSwipe_instructions_1">In this example, an interstitial is
        loaded on activity start and page swipe.  If ad is properly loaded, it
        will be presented directly after swiping.  Try swiping to a new screen.
        </string>
    <string name="pageSwipe_instructions_2">An interstitial should have been
        displayed directly after the page swipe assuming the ad was loaded prior
        to the swipe.  A new ad is loading right now and will be displayed on
        your next swipe if it loaded properly.</string>
    <string name="advancedLayouts_scroll_view_lorem_ipsum">Lorem ipsum dolor sit
        amet, consectetuer adipiscing elit. Nam cursus. Morbi ut mi. Nullam enim
        leo, egestas id, condimentum at, laoreet mattis, massa. Sed eleifend
        nonummy diam. Praesent mauris ante, elementum et, bibendum at, posuere
        sit amet, nibh. Duis tincidunt lectus quis dui viverra vestibulum.
        Suspendisse vulputate aliquam dui. Nulla elementum dui ut augue. Aliquam
        vehicula mi at mauris. Maecenas placerat, nisl at consequat rhoncus, sem
        nunc gravida justo, quis eleifend arcu velit quis lacus. Morbi magna
        magna, tincidunt a, mattis non, imperdiet vitae, tellus. Sed odio est,
        auctor ac, sollicitudin in, consequat vitae, orci. Fusce id felis.
        Vivamus sollicitudin metus eget eros.
        \n\nPellentesque habitant morbi tristique senectus et netus et malesuada
        fames ac turpis egestas. In posuere felis nec tortor. Pellentesque
        faucibus. Ut accumsan ultricies elit. Maecenas at justo id velit
        placerat molestie. Donec dictum lectus non odio. Cras a ante vitae enim
        iaculis aliquam. Mauris nunc quam, venenatis nec, euismod sit amet,
        egestas placerat, est. Pellentesque habitant morbi tristique senectus et
        netus et malesuada fames ac turpis egestas. Cras id elit. Integer quis
        urna. Ut ante enim, dapibus malesuada, fringilla eu, condimentum quis,
        tellus. Aenean porttitor eros vel dolor. Donec convallis pede venenatis
        nibh. Duis quam. Nam eget lacus. Aliquam erat volutpat. Quisque
        dignissim congue leo.
        \n\nMauris vel lacus vitae felis vestibulum volutpat. Etiam est nunc,
        venenatis in, tristique eu, imperdiet ac, nisl. Cum sociis natoque
        penatibus et magnis dis parturient montes, nascetur ridiculus mus. In
        iaculis facilisis massa. Etiam eu urna. Sed porta. Suspendisse quam leo,
        molestie sed, luctus quis, feugiat in, pede. Fusce tellus. Sed metus
        augue, convallis et, vehicula ut, pulvinar eu, ante. Integer orci
        tellus, tristique vitae, consequat nec, porta vel, lectus. Nulla sit
        amet diam. Duis non nunc. Nulla rhoncus dictum metus. Curabitur
        tristique mi condimentum orci. Phasellus pellentesque aliquam enim.
        Proin dui lectus, cursus eu, mattis laoreet, viverra sit amet, quam.
        Curabitur vel dolor ultrices ipsum dictum tristique. Praesent vitae
        lacus. Ut velit enim, vestibulum non, fermentum nec, hendrerit quis,
        leo. Pellentesque rutrum malesuada neque.
        \n\nNunc tempus felis vitae urna. Vivamus porttitor, neque at volutpat
        rutrum, purus nisi eleifend libero, a tempus libero lectus feugiat
        felis. Morbi diam mauris, viverra in, gravida eu, mattis in, ante. Morbi
        eget arcu. Morbi porta, libero id ullamcorper nonummy, nibh ligula
        pulvinar metus, eget consectetuer augue nisi quis lacus. Ut ac mi quis
        lacus mollis aliquam. Curabitur iaculis tempus eros. Curabitur vel mi
        sit amet magna malesuada ultrices. Ut nisi erat, fermentum vel, congue
        id, euismod in, elit. Fusce ultricies, orci ac feugiat suscipit, leo
        massa sodales velit, et scelerisque mi tortor at ipsum. Proin orci odio,
        commodo ac, gravida non, tristique vel, tellus. Pellentesque nibh
        libero, ultricies eu, sagittis non, mollis sed, justo. Praesent metus
        ipsum, pulvinar pulvinar, porta id, fringilla at, est.
        \n\nPhasellus felis dolor, scelerisque a, tempus eget, lobortis id,
        libero. Donec scelerisque leo ac risus. Praesent sit amet est. In
        dictum, dolor eu dictum porttitor, enim felis viverra mi, eget luctus
        massa purus quis odio. Etiam nulla massa, pharetra facilisis, volutpat
        in, imperdiet sit amet, sem. Aliquam nec erat at purus cursus interdum.
        Vestibulum ligula augue, bibendum accumsan, vestibulum ut, commodo a,
        mi. Morbi ornare gravida elit. Integer congue, augue et malesuada
        iaculis, ipsum dui aliquet felis, at cursus magna nisl nec elit. Donec
        iaculis diam a nisi accumsan viverra. Duis sed tellus et tortor
        vestibulum gravida. Praesent elementum elit at tellus. Curabitur metus
        ipsum, luctus eu, malesuada ut, tincidunt sed, diam. Donec quis mi sed
        magna hendrerit accumsan. Suspendisse risus nibh, ultricies eu, volutpat
        non, condimentum hendrerit, augue. Etiam eleifend, metus vitae
        adipiscing semper, mauris ipsum iaculis elit, congue gravida elit mi
        egestas orci. Curabitur pede.
        \n\nMaecenas aliquet velit vel turpis. Mauris neque metus, malesuada
        nec, ultricies sit amet, porttitor mattis, enim. In massa libero,
        interdum nec, interdum vel, blandit sed, nulla. In ullamcorper, est eget
        tempor cursus, neque mi consectetuer mi, a ultricies massa est sed nisl.
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
        inceptos hymenaeos. Proin nulla arcu, nonummy luctus, dictum eget,
        fermentum et, lorem. Nunc porta convallis pede.</string>
</resources>
