<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout">
    <Button android:id="@+id/Banners"
        android:onClick="onClick"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/adCatalog_banners"/>
     <Button android:id="@+id/Interstitials"
        android:onClick="onClick"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/adCatalog_interstitials"/>
      <Button android:id="@+id/AdvancedLayouts"
        android:onClick="onClick"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/adCatalog_advanced_layouts"/>
      <Button android:id="@+id/Video"
        android:onClick="onClick"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/adCatalog_video"/>
     <ToggleButton android:id="@+id/toggleTestMode"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textOff="@string/adCatalog_test_mode_off"
        android:textOn="@string/adCatalog_test_mode_on"/>
</LinearLayout>
