<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView android:id="@+id/interstitialTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interstitials_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
    <TextView android:id="@+id/useCases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interstitials_use_cases"/>
    <Button android:id="@+id/basic"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/interstitials_basic"/>
    <Button android:id="@+id/gameLevels"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/interstitials_game_levels"/>
    <Button android:id="@+id/videoPreroll"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/interstitials_video_preroll"/>
    <Button android:id="@+id/pageSwipe"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/interstitials_page_swipe"/>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/bannersLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ToggleButton android:id="@+id/toggleSplash"
            android:onClick="onClick"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
        <TextView android:id="@+id/splash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interstitials_splash"
            android:layout_above="@id/toggleSplash"
            android:gravity="center_horizontal"/>
    </RelativeLayout>
</LinearLayout>
