<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView android:id="@+id/interstitialTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/videoPreroll_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
    <Button android:id="@+id/earthquake"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/videoPreroll_earthquake"/>
    <Button android:id="@+id/fillInTheBlanks"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/videoPreroll_fill_in_the_blanks"/>
    <Button android:id="@+id/packageTracking"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/videoPreroll_package_tracking"/>
</LinearLayout>
