<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView android:id="@+id/bannerTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/banners_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
    <Button android:id="@+id/standardBanner"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/banners_standard_dimensions"/>
    <Button android:id="@+id/mediumRectangle"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/banners_iab_mrect_dimensions"/>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/bannersLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <com.google.ads.AdView android:id="@+id/adViewBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            ads:adUnitId="@string/admob_id"
            ads:adSize="BANNER"/>
        <com.google.ads.AdView android:id="@+id/adViewRect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            ads:adUnitId="@string/admob_id"
            ads:adSize="IAB_MRECT"/>
    </RelativeLayout>
</LinearLayout>
